# atrl

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  app_settings.toml  deny.toml  index.html  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-page.yaml  release.yml
assets/fonts/definitions/: missing.ron  missing_debug.ron
assets/images/tilesets/definitions/: actors.ron  features.ron  items.ron  missing.ron  missing_debug.ron  terrain.ron  tileset_ids.txt  tiny_galaxy_tg_fx.ron  tiny_galaxy_tg_interface.ron  tiny_galaxy_tg_items.ron  tiny_galaxy_tg_monsters.ron  tiny_galaxy_tg_portraits.ron  tiny_galaxy_tg_space.ron  tiny_galaxy_tg_world.ron  ui.ron
assets/raws/: mobs.ron  player.ron
docs/: Design.md  README.md  SUMMARY.md  git.md
launchers/ios/: Cargo.toml
launchers/ios/src/: main.rs
launchers/native/: Cargo.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  index.html
launchers/wasm/src/: main.rs
src/: components.rs  definitions.rs  globals.rs  imports.rs  lib.rs  log.rs  macros.rs  main.rs  modules.rs  prelude.rs  resources.rs  systems.rs  types.rs  ui.rs  utilities.rs
src/components/: ai_actions.rs  ai_components.rs  ai_scorers.rs  ai_type.rs  blocks_movement.rs  blocks_vision.rs  chunk.rs  chunk_position.rs  display.rs  equipable.rs  health.rs  local_position.rs  mob.rs  movement.rs  position_component.rs  tags.rs  target_visualizer.rs  vision.rs  world_position.rs
src/components/bundles/: actor.rs  actor_bundle.rs  chunk.rs  feature.rs  item.rs  player_bundle.rs  position.rs  terrain.rs  ui.rs
src/components/bundles/map/: actor_map.rs  feature_map.rs  item_map.rs  terrain_map.rs  ui_map.rs
src/debug/: debug.rs
src/debug/systems/: show_ui.rs  window_title.rs
src/definitions/: turn_manager.rs
src/globals/: app.rs  tiny_galaxy.rs
src/macros/: generic_macros.rs  init_resource.rs  query_extensions.rs  switch_app_state.rs
src/modules/: bundles.rs  components.rs  plugins.rs  resources.rs  system_params.rs  systems.rs  types.rs  utilities.rs
src/modules/bundles/: actor_bundle.rs  player_bundle.rs
src/modules/components/: ai_actions.rs  ai_components.rs  ai_type.rs  equipable.rs  field_of_view.rs  movement.rs  position_component.rs  target_visualizer.rs  vision.rs
src/modules/plugins/camera/: camera_plugin.rs
src/modules/resources/: action_queue.rs  ai_context.rs  app_settings.rs  camera_settings_resource.rs  game_context.rs  game_settings.rs  map_manager_resource.rs  mouse_position.rs  player_entity.rs  turn_manager.rs
src/modules/resources/camera/: camera_settings_resource.rs  loaded_cameras.rs
src/modules/resources/ui/: mouse_position.rs
src/modules/system_params/: blocking_params.rs
src/modules/system_params/camera/: cameras.rs
src/modules/system_params/map_manager/: map_manager.rs
src/modules/systems/: systems_plugin.rs
src/modules/systems/functions/: astar.rs  create_tilemap.rs  dijkstra.rs  shadowcast.rs
src/modules/systems/init/: app_settings.rs  contexts.rs  game_contexts.rs  init_white_pixel.rs  map_manager.rs  mouse_position.rs  spawn_cameras.rs  turn_manager.rs
src/modules/systems/run/: player_input.rs  set_current_map_to_current_player.rs  update_tilesmaps.rs
src/modules/types/actions/: attack_action.rs  movement_action.rs  wait_action.rs
src/prelude/: macros.rs
src/resources/: action_queue.rs  ai_context.rs  app_settings.rs  font_storage.rs  game_context.rs  game_settings.rs  image_storage.rs  map_manager.rs  map_manager_resource.rs  player_entity.rs  texture_storage.rs  tileset_storage.rs  turn_manager.rs  ui_image_storage.rs  universe_generation_settings.rs
src/resources/camera/: camera_settings_resource.rs  loaded_cameras.rs
src/resources/player/: player_timer.rs
src/resources/ui/: mouse_position.rs
src/resources/white_pixel/: white_pixel.rs
src/systems/: app_state.rs  systems_plugin.rs
src/systems/functions/: create_tilemap.rs  generate.rs  styles.rs  tilemap_builder.rs
src/systems/init/: assets.rs  camera.rs  cleanup.rs  generator_config.rs  input.rs  main_menu.rs  map_manager.rs  mouse_position.rs  resources.rs  spawm_actor.rs  spawn_cameras.rs  spawn_grid.rs  spawn_grids.rs  spawn_mob.rs  turn_manager.rs  ui.rs  white_pixel.rs
src/systems/quit/: save_app_settings.rs  save_settings.rs
src/systems/run/: player_input.rs  set_current_map_to_current_player.rs  store_window_size.rs  update_app_settings.rs  update_camera_dimensions.rs  update_tilemap.rs  update_tilesmaps.rs  update_window.rs
src/systems/system_params/: actors.rs  app_settings.rs  assets.rs  blocking_params.rs  map_context.rs
src/systems/ui/: main_menu.rs  settings.rs  test_menu.rs  universe_gen.rs  world_gen.rs
src/test/: mod.rs  test.rs  universe_gen.rs
src/types/: descriptor.rs  generator.rs  resolution.rs  test.rs
src/types/actions/: attack_action.rs  movement_action.rs  wait_action.rs
src/types/actor/: action.rs  movement_type.rs  vision_type.rs
src/types/camera/: settings.rs
src/types/definitions/: grid_size.rs  tile_ids.rs  tileset_ids.rs  yendor.rs
src/types/input/: movement.rs
src/types/map/: map.rs  map_layer.rs
src/types/map_definitions/: galactic_feature.rs  map_layer.rs
src/types/pass_through/: map_pass_through_data.rs  path_pass_through_data.rs
src/types/random/: random.rs
src/types/shapes/: circle.rs  line.rs  line_iter.rs  octant.rs  shape.rs
src/ui/: option_editor.rs  text_edit_validation.rs  text_val.rs
src/ui/render/: ui_widget_render.rs
src/ui/widgets/: ui_widget.rs
src/utilities/: coords.rs  macros.rs  save_load.rs  test.rs
src/utilities/error/: atrl_error.rs
src/utilities/file/: find.rs  read.rs  write.rs
src/utilities/testing/: mod.rs  test.rs
test/: Cargo.toml
test/src/: lib.rs  universe_gen.rs
tests/: mod.rs  universe_generation.rs
tests/systems/: mod.rs
tests/systems/functions/: create_tilemap.rs  mod.rs
tests/systems/ui/: mod.rs  test_menu.rs
tools/ci/src/: main.rs
tools/spancmp/: Cargo.toml
tools/spancmp/src/: main.rs  parse.rs  pretty.rs
(+1314 files in other folders)
