#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Roguelike Game"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/atrl"
license     = "BlueOak-1.0.0"
name        = "atrl"
readme      = "README.md"
repository  = "https://github.com/YendorEngine/atrl"
version     = "0.1.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/"]
keywords   = ["game", "ascii", "roguelike"]
resolver   = "2"

#################################
#########       Workspaces
#################################
[workspace]
members = ["tools/ci", "tools/spancmp"]

#################################
#########       Features
#################################
[features]
# configuration for release builds
release = ["bevy_embedded_assets"]

# default configurations
default = ["dev"]

# configuration for debugging information
debug = [
  "bevy-inspector-egui",
  "debug-graph",
  # "debug_asset_server",
]

debug-trace = ["debug", "trace"]

# default configuration while developing
dev = ["bevy/filesystem_watcher", "bevy/dynamic"]

# Parallelism
parallel = ["rayon"]

# Debugging
debug-graph        = ["bevy_mod_debugdump"]
debug_asset_server = ["bevy/debug_asset_server"]

# Tracing
trace        = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy  = ["bevy/trace_tracy"]
wgpu_trace   = ["bevy/wgpu_trace"]

################################
#########       Optimizations
################################

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

######################################
#########       Bevy
######################################
[dependencies.bevy]
default-features = false
features = [
  "bevy_asset",
  "bevy_winit",
  "png",
  "x11",
  "bevy_scene",
  "wayland",
  "bevy_core_pipeline",

  # Render
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",

  # File formats
  "png",
  "jpeg",
  "bmp",

  # Serialization
  "serialize",
]
version = "0.9"

[dependencies.bevy_tweening]
features = ["bevy_asset"]
version  = "0.6"

[dependencies.big-brain]
version = "0.15"

######################################
#########       Input
######################################
[dependencies.leafwing-input-manager]
version = "0.7.0"

######################################
#########       Map Rendering
######################################
[dependencies.bevy_ecs_tilemap]
features = []
# version  = "0.9"
git = "https://github.com/StarArawn/bevy_ecs_tilemap"

[dependencies.bevy_tileset]
features = ["auto-tile"]
version  = "0.6"

[dependencies.bevy_tile_atlas]
default-features = false
version          = "0.5"

###############################
#########       Serialization   
###############################
[dependencies.ron]
version = "0.8"

[dependencies.serde]
features = ["derive"]
version  = "1"

[dependencies.toml]
version = "0.5"

[dependencies.serde_json]
version = "1"

######################################
#########       States
######################################
[dependencies.iyes_loopless]
features = ["states"]
version  = "0.9"

[dependencies.iyes_progress]
features = ["assets", "iyes_loopless"]
version  = "0.7"

######################################
#########       Random
######################################
[dependencies.noise]
version = "0.8"

[dependencies.rand]
version = "0.8"

[dependencies.rand_pcg]
features = ["serde1"]
version  = "0.3"

[dependencies.rand_seeder]
version = "0.2"

[dependencies.xxhash-rust]
features = ["xxh3", "const_xxh3"]
version  = "0.8"

######################################
#########       UI
######################################
[dependencies.kayak_ui]
branch = "bugfixes"
git    = "https://github.com/StarArawn/kayak_ui"

[dependencies.kayak_font]
branch = "bugfixes"
git    = "https://github.com/StarArawn/kayak_ui"

[dependencies.bevy_egui]
version = "0.18"

[dependencies.bevy-egui-kbgp]
version = "0.10"

######################################
#########       Utility
######################################

[dependencies.arrayvec]
version = "0.7"

[dependencies.anyhow]
version = "1"

[dependencies.dyn-clone]
version = "1"

[dependencies.index_list]
version = "0.2.7"

[dependencies.thiserror]
version = "1"

[dependencies.strum]
version = "0.24"

[dependencies.strum_macros]
version = "0.24"

[dependencies.yendor]
git = "https://github.com/YendorEngine/yendor"

######################################
######################################
#########       Package/Optional Dependencies
######################################
######################################

######################################
#########       Release
######################################
[dependencies.bevy_embedded_assets]
optional = true
version  = "0.6"

######################################
#########       Debug
######################################
[dependencies.bevy-inspector-egui]
branch   = "rework"
git      = "https://github.com/jakobhellermann/bevy-inspector-egui"
optional = true

[dependencies.bevy_mod_debugdump]
optional = true
version  = "0.6"

######################################
#########       Parallel
######################################
[dependencies.rayon]
optional = true
version  = "1"

######################################
#########       Build Dependencies
######################################
[build-dependencies]
embed-resource = "1.4"
