#################################
#########       Package
#################################
[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Roguelike Game"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/atrl"
license     = "BlueOak-1.0.0"
name        = "atrl"
readme      = "README.md"
repository  = "https://github.com/YendorEngine/atrl"
version     = "0.1.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/"]
keywords   = ["game", "ascii", "roguelike"]
resolver   = "2"

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

#################################
#########       Workspaces
#################################
[workspace]
members = ["tools/ci", "tools/spancmp"]

#################################
#########       Features
#################################
[features]
# configuration for release builds
release = ["bevy_embedded_assets"]

# default configurations
default = ["dev"]

# configuration for debugging information
debug = [
  "bevy-inspector-egui",
  "debug-graph",
  # "debug_asset_server",
]

debug-trace = ["debug", "trace"]

# default configuration while developing
dev = ["hot", "bevy/dynamic"]

# Parallelism
parallel = ["rayon"]

# Debugging
debug-graph        = ["bevy_mod_debugdump"]
debug_asset_server = ["bevy/debug_asset_server"]
hot                = ["bevy/filesystem_watcher"]

# Tracing
trace        = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]
trace_tracy  = ["bevy/trace_tracy"]
wgpu_trace   = ["bevy/wgpu_trace"]

################################
#########       Optimizations
################################

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package.atrl]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

################################
######### Workspace Dependencies
################################
[workspace.dependencies]
# Keep these in sync with bevy
image = "0.24"
winit = "0.27"

################################
#########       Dependencies
################################

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "png",
  "x11",
  "bevy_scene",
  "wayland",
  "bevy_core_pipeline",

  # Render
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",

  # File formats
  "png",
  "jpeg",
  "bmp",

  # Serialization
  "serialize",
] }
image = { workspace = true }
winit = { workspace = true }

bevy_tweening = { version = "0.6", features = ["bevy_asset"] }
big-brain     = { version = "0.15" }

######################################
#########       Input
######################################
leafwing-input-manager = { version = "0.7.0" }

######################################
#########       Map Rendering
######################################

bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_tile_atlas  = { default-features = false, version = "0.5" }
bevy_tileset     = { version = "0.6", features = ["auto-tile"] }

######################################
#########       Serialization
######################################
ron        = "0.8"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.5"

######################################
#########       States
######################################
iyes_loopless = { version = "0.9", features = ["states"] }
iyes_progress = { version = "0.7", features = ["assets"] }

######################################
#########       Random
######################################
noise       = "0.8"
rand        = "0.8"
rand_pcg    = { version = "0.3", features = ["serde1"] }
rand_seeder = "0.2"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

######################################
#########       UI
######################################
bevy-egui-kbgp = "0.10"
bevy_egui      = "0.18"

######################################
#########       Utility
######################################

anyhow       = "1"
arrayvec     = "0.7"
dyn-clone    = "1"
index_list   = "0.2"
strum        = "0.24"
strum_macros = "0.24"
thiserror    = "1"
yendor       = { git = "https://github.com/YendorEngine/yendor" }
######################################
######################################
#########       Package/Optional Dependencies
######################################
######################################

######################################
#########       Release
######################################
[dependencies.bevy_embedded_assets]
optional = true
version  = "0.6"

######################################
#########       Debug
######################################
[dependencies.bevy-inspector-egui]
branch   = "rework"
git      = "https://github.com/jakobhellermann/bevy-inspector-egui"
optional = true

[dependencies.bevy_mod_debugdump]
optional = true
version  = "0.6"

######################################
#########       Parallel
######################################
[dependencies.rayon]
optional = true
version  = "1"

######################################
#########       Build Dependencies
######################################
[build-dependencies]
embed-resource = "1.4"

[[test]]
harness = false
name    = "universe_generation"
