[package]
authors     = ["Laocoon <laocoon7@gmail.com>", "BigBanana <lecoqjacob@gmail.com>"]
description = "Away Team Roguelike Game Test"
edition     = "2021"
homepage    = "https://github.com/YendorEngine/atrl"
license     = "BlueOak-1.0.0"
name        = "atrl-test"
readme      = "README.md"
repository  = "https://github.com/YendorEngine/atrl"
version     = "0.1.0"
#license-file = "LICENSE"
categories = ["games"]
exclude    = ["assets/", "tools/", ".github/"]
keywords   = ["game", "ascii", "roguelike"]
resolver   = "2"

[dependencies]
