[package]
edition   = "2021"
name      = "wasm-launcher"
version   = "0.1.0"
workspace = "../.."

[dependencies]
stylist = { version = "0.11", features = ["yew_integration"] }
web-sys = { version = "0.3", features = ["Document", "Window"] }
yew     = "0.20"

atrl = { package = "atrl", path = "../.." }

bevy  = { workspace = true }
image = { workspace = true }
winit = { workspace = true }
